2004-12-16  Geoffrey Keating  <geoffk@apple.com>

	* c-cppbuiltin.c (builtin_define_float_constants): Set __*_EPSILON__
	for IBM long double format correctly.

	* config/darwin.c (darwin_handle_weak_import_attribute): Permit
	VAR_DECLs to have weak_import attribute.

2004-12-09  Stan Shebs  <shebs@apple.com>

	* config/rs6000/darwin-asm.h: New file, 32/64-bit assembly macros
	formerly in darwin-tramp.asm.
	* config/rs6000/darwin-tramp.asm: Include darwin-asm.h.
	* config/rs6000/darwin-fpsave.asm: Use 32/64-bit macros.
	* config/rs6000/t-darwin: Add dependencies.

2004-12-01  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (rs6000_override_options): Make 64-bit
	Darwin default to one-byte bools.

	* config/darwin.c (machopic_select_rtx_section): Don't put relocatable
	expressions in the .literal8 section.

2004-11-21  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c: (rs6000_darwin64_function_arg): Add
	UNION_TYPE case.
	(function_arg): Move darwin test up, sniff mode first for
	efficiency, test for union type.

2004-11-14  Stan Shebs  <shebs@apple.com>

	Basic ABI changes for passing structs by value in 64-bit Darwin.
	* config/rs6000/rs6000.c (rs6000_darwin64_abi): New flag.
	(rs6000_override_options): Set it for 64-bit Darwin.
	(rs6000_parse_abi_options): Add testing options to change it.
	(rs6000_return_in_memory): Test whether the type is one
	that can be passed in registers.
	(darwin64_function_arg_advance): New.
	(function_arg_advance): Call it, plus add recursion depth
	argument and test when counting off arguments.
	(rs6000_darwin64_function_arg): New.
	(function_arg): Call it.
	(setup_incoming_varargs): Add argument to function_arg_advance.
	(rs6000_darwin64_function_value): New.
	(rs6000_function_value): Call it.
	* config/rs6000/rs6000.h (FUNCTION_ARG_ADVANCE): Pass depth arg.
	* config/rs6000/rs6000-protos.h: Update decl of
	function_arg_advance.

2004-11-04  Geoffrey Keating  <geoffk@apple.com>
